# LUNA

./: README.md  luna.toml  pyproject.toml  requirements.txt  simulation.py
dashboard/: package.json  vite.config.ts
dashboard/src/: App.tsx
dashboard/src/api/: client.ts  types.ts
dashboard/src/components/layout/: Header.tsx
dashboard/src/components/metrics/: SynthesisPanel.tsx
dashboard/src/hooks/: useLunaState.ts
docs/: COGNITIVE_ARCHITECTURE.md  GETTING_STARTED.md  V6.md
luna/: __init__.py
luna/api/: app.py
luna/api/routes/: dashboard.py
luna/autonomy/: window.py
luna/chat/: session.py
luna/consciousness/: __init__.py  evaluator.py  state.py  synthesis.py
luna/core/: config.py
luna/dream/: dream_cycle.py
luna/llm_bridge/: __init__.py  bridge.py  circuit_breaker.py  prompt_builder.py  voice_validator.py
luna/llm_bridge/providers/: __init__.py  anthropic.py  deepseek.py  local.py  openai.py
luna/memory/: memory_manager.py
luna/orchestrator/: cognitive_loop.py
tests/: __init__.py  test_autonomy_window.py  test_dream_priors.py  test_evaluator.py  test_llm_bridge.py
uml_diagrams/: generate.py  render.py
